--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>352 Tagged Open Ruby Bugs as of 2023-04-04 04:49:21 +0900</title>
+<title>350 Tagged Open Ruby Bugs as of 2023-04-04 04:52:37 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -23,18 +23,16 @@
 <input type="submit" value="parser" />
 <input type="submit" value="fiber" />
 <input type="submit" value="tracepoint" />
+<input type="submit" value="doc" />
 <input type="submit" value="autoload" />
 <input type="submit" value="coverage" />
-<input type="submit" value="doc" />
 <input type="submit" value="refine" />
-<input type="submit" value="mjit" />
-<input type="submit" value="unfixable" />
 <input type="submit" value="yjit" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">352</span> matched)
+(<span id="matched">350</span> matched)
 <table>
-<caption>352 Tagged Open Ruby Bugs as of 2023-04-04 04:49:21 +0900</caption>
+<caption>350 Tagged Open Ruby Bugs as of 2023-04-04 04:52:37 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -64,10 +62,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/19568">Windows mingw rust, failures with test/rubygems/test_gem_ext_cargo_builder.rb</a>
 </td>
 </tr>
-<tr class=" lib ">
+<tr class=" doc lib ">
 <td><a href="https://bugs.ruby-lang.org/issues/19566">19566</a>
 </td>
-<td>lib</td>
+<td>doc lib</td>
 <td><a href="https://bugs.ruby-lang.org/issues/19566">OptionParser::on raises unsupported argument type: URI (ArgumentError) but shouldn&#39;t</a>
 </td>
 </tr>
@@ -1359,13 +1357,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/17826">Ractor#take hangs if used in multiple Threads</a>
 </td>
 </tr>
-<tr class=" mjit ">
-<td><a href="https://bugs.ruby-lang.org/issues/17817">17817</a>
-</td>
-<td>mjit</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17817">--jit outputs ./tmp/_ruby_mjit_*.h: No such file or directory on with TMP</a>
-</td>
-</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/17799">17799</a>
 </td>
@@ -1898,13 +1889,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/14838">RegexpError with double &quot;s&quot; in look-behind assertion in case-insensitive unicode regexp</a>
 </td>
 </tr>
-<tr class=" os/arch build ">
-<td><a href="https://bugs.ruby-lang.org/issues/14826">14826</a>
-</td>
-<td>os/arch build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14826">make: *** [.ext/include/sparc-solaris2.10/rb_mjit_min_header-2.6.0.h] Error 1 on Solaris 10 with very old gcc3</a>
-</td>
-</tr>
 <tr class=" os/arch thread ">
 <td><a href="https://bugs.ruby-lang.org/issues/14761">14761</a>
 </td>
@@ -2402,10 +2386,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/8299">Minor error in float parsing</a>
 </td>
 </tr>
-<tr class=" thread unfixable ">
+<tr class=" thread ">
 <td><a href="https://bugs.ruby-lang.org/issues/8185">8185</a>
 </td>
-<td>thread unfixable</td>
+<td>thread</td>
 <td><a href="https://bugs.ruby-lang.org/issues/8185"> Thread/fork issue</a>
 </td>
 </tr>
