--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>345 Tagged Open Ruby Bugs as of 2023-04-27 03:31:32 +0900</title>
+<title>342 Tagged Open Ruby Bugs as of 2023-05-06 05:09:44 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -25,15 +25,15 @@
 <input type="submit" value="fiber" />
 <input type="submit" value="autoload" />
 <input type="submit" value="coverage" />
+<input type="submit" value="doc" />
 <input type="submit" value="refine" />
 <input type="submit" value="backport" />
-<input type="submit" value="doc" />
 <input type="submit" value="yjit" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">345</span> matched)
+(<span id="matched">342</span> matched)
 <table>
-<caption>345 Tagged Open Ruby Bugs as of 2023-04-27 03:31:32 +0900</caption>
+<caption>342 Tagged Open Ruby Bugs as of 2023-05-06 05:09:44 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -42,18 +42,11 @@
 </tr>
 </thead>
 <tbody>
-<tr class=" parser ">
-<td><a href="https://bugs.ruby-lang.org/issues/19619">19619</a>
+<tr class=" doc ">
+<td><a href="https://bugs.ruby-lang.org/issues/19622">19622</a>
 </td>
-<td>parser</td>
-<td><a href="https://bugs.ruby-lang.org/issues/19619">Endless method definition with parameters for an instance given as numbered parameters doesn&#39;t work</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/19611">19611</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/19611">Ruby hangs up with `while true &amp;&amp; true`</a>
+<td>doc</td>
+<td><a href="https://bugs.ruby-lang.org/issues/19622">Undocumented behavior of Array#&amp; and similar methods</a>
 </td>
 </tr>
 <tr class=" win lib ">
@@ -63,25 +56,11 @@
 <td><a href="https://bugs.ruby-lang.org/issues/19609">net/http ignores open_timeout, read_timeout on Windows</a>
 </td>
 </tr>
-<tr class=" os/arch ">
-<td><a href="https://bugs.ruby-lang.org/issues/19606">19606</a>
-</td>
-<td>os/arch</td>
-<td><a href="https://bugs.ruby-lang.org/issues/19606">addr2line.c broken on Fedora 38</a>
-</td>
-</tr>
 <tr class=" tracepoint maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/19598">19598</a>
 </td>
 <td>tracepoint maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/19598">Inconsistent behaviour of TracePoint API</a>
-</td>
-</tr>
-<tr class=" build ">
-<td><a href="https://bugs.ruby-lang.org/issues/19592">19592</a>
-</td>
-<td>build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/19592">Unable to statically link a single extension in 3.2.x and &gt;=3.1.4</a>
 </td>
 </tr>
 <tr class=" backport ">
